--- a/app/src/main/res/layout/games_fragment_main.xml
+++ b/app/src/main/res/layout/games_fragment_main.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="hva.groepje12.quitsmokinghabits.ui.fragment.gameFragment">
+    tools:context="hva.groepje12.quitsmokinghabits.ui.fragment.GameFragment">
 
     <TextView
         android:id="@+id/section_label"
