--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -54,20 +54,19 @@
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
                 android:layout_marginTop="5pt"
-                android:orientation="horizontal"
-                android:weightSum="1">
+                android:orientation="horizontal">
 
                 <EditText
                     android:id="@+id/edit_text_birth_date"
-                    android:layout_width="256dp"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.16"
+                    android:layout_weight="1"
                     android:hint="@string/prompt_birthDate"
                     android:inputType="date" />
 
                 <Button
                     android:id="@+id/button_choose_date"
-                    android:layout_width="80dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:onClick="datePicker"
                     android:text="@string/button_choose_date" />
