--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -33,7 +33,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="@string/prompt_first_name"
-                    android:inputType="textPersonName" />
+                    android:inputType="textCapSentences" />
             </android.support.design.widget.TextInputLayout>
 
             <android.support.design.widget.TextInputLayout
@@ -47,7 +47,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:hint="@string/prompt_last_name"
-                    android:inputType="textPersonName" />
+                    android:inputType="textCapSentences" />
             </android.support.design.widget.TextInputLayout>
 
             <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -61,6 +61,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
+                    android:enabled="false"
                     android:hint="@string/prompt_birthDate"
                     android:inputType="date" />
 
@@ -79,29 +80,6 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/action_register"
                 android:textStyle="bold" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="7pt"
-                android:background="@android:color/darker_gray" />
-
-            <Button
-                android:id="@+id/button_send_notification"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/send_notification"
-                android:textStyle="bold" />
-
-            <Button
-                android:id="@+id/button_send_timed_notification"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="@string/send_timed_notification"
-                android:textStyle="bold" />
-
         </LinearLayout>
     </ScrollView>
 
