--- a/app/src/main/res/layout/listview_apps.xml
+++ b/app/src/main/res/layout/listview_apps.xml
@@ -10,6 +10,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="5dip"
         android:layout_marginRight="5dip"
+        android:layout_marginLeft="10dp"
         android:layout_marginTop="5dip" />
 
     <TextView
