--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,6 +45,7 @@
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
         android:visibility="invisible"
+        android:onClick="timePicker"
         app:srcCompat="@drawable/alarm_add_white" />
 
 </android.support.design.widget.CoordinatorLayout>
