--- a/app/src/main/res/layout/alarms_fragment_main.xml
+++ b/app/src/main/res/layout/alarms_fragment_main.xml
@@ -14,4 +14,11 @@
         android:layout_height="wrap_content"
         android:text="Alarmen" />
 
+    <ListView
+        android:id="@+id/list_times"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/section_label" />
+
 </RelativeLayout>
