--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -17,7 +17,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:src="@drawable/wap"
         android:layout_centerHorizontal="true"
         />
 
@@ -31,7 +30,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:src="@drawable/wap"
         android:layout_toLeftOf="@id/appIcon3"/>
     <ImageView
         android:id="@+id/appIcon1"
@@ -41,8 +39,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:layout_toLeftOf="@id/appIcon2"
-        android:src="@drawable/wap" />
+        android:layout_toLeftOf="@id/appIcon2" />
 
     <!--4th-->
     <ImageView
@@ -53,7 +50,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:src="@drawable/wap"
         android:layout_toRightOf="@id/appIcon3"/>
     <!--5th-->
     <ImageView
@@ -64,7 +60,6 @@
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:src="@drawable/wap"
         android:layout_toRightOf="@id/appIcon4"/>
 
     <Button
