--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -8,17 +8,37 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="hva.groepje12.quitsmokinghabits.ui.fragment.HomeFragment">
 
+
+    <TextView
+        android:id="@+id/welcomeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:text="Welkom "
+        android:paddingBottom="10dp"
+        android:textSize="30sp"
+
+        />
+
+    <TextView
+        android:id="@+id/lauchFavoriteGamesTextView"
+        android:layout_below="@id/welcomeTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:text="Open je favoriete games:" />
+
     <!--Middle-->
     <ImageView
         android:id="@+id/appIcon3"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@id/lauchFavoriteGamesTextView"
+        android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dip"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
-        android:layout_marginTop="5dip"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_marginTop="5dip" />
 
 
     <!--2nd-->
@@ -26,15 +46,18 @@
         android:id="@+id/appIcon2"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@id/lauchFavoriteGamesTextView"
         android:layout_marginBottom="5dip"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:layout_toLeftOf="@id/appIcon3"/>
+        android:layout_toLeftOf="@id/appIcon3" />
+
     <ImageView
         android:id="@+id/appIcon1"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@id/lauchFavoriteGamesTextView"
         android:layout_marginBottom="5dip"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
@@ -46,36 +69,25 @@
         android:id="@+id/appIcon4"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@id/lauchFavoriteGamesTextView"
         android:layout_marginBottom="5dip"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:layout_toRightOf="@id/appIcon3"/>
+        android:layout_toRightOf="@id/appIcon3" />
     <!--5th-->
     <ImageView
         android:id="@+id/appIcon5"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_below="@id/lauchFavoriteGamesTextView"
         android:layout_marginBottom="5dip"
         android:layout_marginLeft="10dp"
         android:layout_marginRight="5dip"
         android:layout_marginTop="5dip"
-        android:layout_toRightOf="@id/appIcon4"/>
+        android:layout_toRightOf="@id/appIcon4" />
 
-    <Button
-        android:id="@+id/button_send_notification"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/send_notification"
-        android:textStyle="bold"
-        android:layout_below="@id/appIcon1"/>
 
-    <Button
-        android:id="@+id/button_send_timed_notification"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/button_send_notification"
-        android:text="@string/send_timed_notification"
-        android:textStyle="bold" />
+
+
 </RelativeLayout>
