--- a/app/src/main/res/layout/home_fragment_main.xml
+++ b/app/src/main/res/layout/home_fragment_main.xml
@@ -14,85 +14,57 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:text="Welkom "
         android:paddingBottom="10dp"
-        android:textSize="30sp"
-
-        />
+        android:text="Welkom "
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/lauchFavoriteGamesTextView"
-        android:layout_below="@id/welcomeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@id/welcomeTextView"
         android:layout_centerVertical="true"
-        android:text="Open je favoriete games:" />
+        android:text="Open je favoriete games door op de icoontjes te klikken!" />
 
-    <!--Middle-->
-    <ImageView
-        android:id="@+id/appIcon3"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/lauchFavoriteGamesTextView"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dip"
-        android:layout_marginTop="5dip"
-        android:src="@drawable/add"/>
+    <LinearLayout
+        android:id="@+id/preferred_app_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/lauchFavoriteGamesTextView"
+        android:orientation="horizontal">
 
+        <!-- Preferred Apps -->
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/no_app_found" />
 
-    <!--2nd-->
-    <ImageView
-        android:id="@+id/appIcon2"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/lauchFavoriteGamesTextView"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dip"
-        android:layout_marginTop="5dip"
-        android:layout_toLeftOf="@id/appIcon3"
-        android:src="@drawable/add"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/no_app_found" />
 
-    <ImageView
-        android:id="@+id/appIcon1"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/lauchFavoriteGamesTextView"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dip"
-        android:layout_marginTop="5dip"
-        android:layout_toLeftOf="@id/appIcon2"
-        android:src="@drawable/add"/>
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/no_app_found" />
 
-    <!--4th-->
-    <ImageView
-        android:id="@+id/appIcon4"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/lauchFavoriteGamesTextView"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dip"
-        android:layout_marginTop="5dip"
-        android:layout_toRightOf="@id/appIcon3"
-        android:src="@drawable/add"/>
-    <!--5th-->
-    <ImageView
-        android:id="@+id/appIcon5"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_below="@id/lauchFavoriteGamesTextView"
-        android:layout_marginBottom="5dip"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="5dip"
-        android:layout_marginTop="5dip"
-        android:layout_toRightOf="@id/appIcon4"
-        android:src="@drawable/add" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/no_app_found" />
 
-
-
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="10dp"
+            android:src="@drawable/no_app_found" />
+        <!-- /Preferred Apps -->
+    </LinearLayout>
 
 </RelativeLayout>
