Aanbevolen Apps toegevoegt

--- a/app/src/main/res/layout/alarms_fragment_main.xml
+++ b/app/src/main/res/layout/alarms_fragment_main.xml
@@ -12,7 +12,9 @@
         android:id="@+id/section_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Alarmen" />
+        android:text="Alarmen"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
 
     <ListView
         android:id="@+id/list_times"
