Improved register activity

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -11,20 +11,31 @@
     tools:context="hva.groepje12.quitsmokinghabits.ui.activity.RegisterActivity">
 
     <!-- Login progress -->
+
+
     <ScrollView
         android:id="@+id/register_form"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
 
         <LinearLayout
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+            <TextView
+                android:id="@+id/register_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Maak een account aan"
+                android:textSize="24sp" />
 
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+
 
                 <EditText
                     android:id="@+id/edit_text_first_name"
@@ -61,17 +72,134 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:enabled="false"
+
+                   android:onClick="datePicker"
                     android:hint="@string/prompt_birthDate"
                     android:inputType="date" />
 
+            </LinearLayout>
+
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
                 <Button
-                    android:id="@+id/button_choose_date"
+                android:id="@+id/cigPerDayIncrease"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:text="+"
+                android:layout_alignParentRight="true" />
+
+                <Button
+                    android:id="@+id/cigPerDayDecrease"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_toLeftOf="@id/cigPerDayIncrease"
+                    android:text="-" />
+                <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:id="@+id/cigarettesPerDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:onClick="datePicker"
-                    android:text="@string/button_choose_date" />
-            </LinearLayout>
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:text="0"
+                    android:ems="10"
+                    android:hint="Aantal sigaretten per dag"
+                    android:inputType="number" />
+                </android.support.design.widget.TextInputLayout>
+            </RelativeLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Button
+                    android:id="@+id/cigPerPackIncrease"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:text="+"
+                    android:layout_alignParentRight="true" />
+
+                <Button
+                    android:id="@+id/cigPerPackDecrease"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_toLeftOf="@id/cigPerPackIncrease"
+                    android:text="-" />
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <EditText
+                        android:id="@+id/cigarettesInPack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:text="0"
+                        android:ems="10"
+                        android:hint="Aantal sigaretten in een pakje"
+                        android:inputType="number" />
+                </android.support.design.widget.TextInputLayout>
+
+
+
+
+
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/euroSign"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="€"
+                    android:layout_marginTop="17dp"
+                    android:textSize="18dp" />
+                <Button
+                    android:id="@+id/pricePerPackIncrease"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:text="+"
+                    android:layout_alignParentRight="true" />
+
+                <Button
+                    android:id="@+id/pricePerPackDecrease"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_toLeftOf="@id/pricePerPackIncrease"
+                    android:text="-" />
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+
+
+                    <EditText
+                        android:id="@+id/pricePerPack"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentStart="true"
+                        android:layout_centerVertical="true"
+                        android:text="0"
+
+                        android:layout_marginLeft="10dp"
+                        android:ems="10"
+                        android:hint="Prijs per pak"
+                        android:inputType="numberDecimal" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+
+
+
+
+            </RelativeLayout>
 
             <Button
                 android:id="@+id/button_create_account"
@@ -80,7 +208,10 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/action_register"
                 android:textStyle="bold" />
+
         </LinearLayout>
+
+
     </ScrollView>
 
 </LinearLayout>
